[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Sounds/mixkit-fast-sword-whoosh-2792.wav" type="AudioStream" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Player/spritesheet.png" type="Texture" id=19]

[sub_resource type="CapsuleShape2D" id=9]
radius = 3.98231
height = 6.32605

[sub_resource type="Animation" id=12]
resource_name = "Attack"
length = 0.32
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/SwordHit/CollisionShape2D1:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=18]
resource_name = "Attack2"
length = 0.32
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/SwordHit2/CollisionShape2D2:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=17]
resource_name = "Die"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Empty"
length = 0.3

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Jump"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 9 ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/SwordHit/CollisionShape2D1:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/SwordHit2/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 5.5, 9 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 2, 4 )
collision_mask = 18
script = ExtResource( 2 )
life = 3
health = 3

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 19 )
hframes = 6
vframes = 5
frame = 3

[node name="SwordHit" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D1" type="CollisionShape2D" parent="Sprite/SwordHit"]
position = Vector2( 8, 13 )
rotation = 1.57667
shape = SubResource( 9 )
disabled = true

[node name="SwordHit2" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Sprite/SwordHit2"]
position = Vector2( -7, 13 )
rotation = 1.57667
shape = SubResource( 9 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 12 )
anims/Attack2 = SubResource( 18 )
anims/Die = SubResource( 17 )
anims/Empty = SubResource( 19 )
anims/Idle = SubResource( 5 )
anims/Jump = SubResource( 8 )
anims/RESET = SubResource( 13 )
anims/Walk = SubResource( 6 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 8 )
shape = SubResource( 16 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="death_Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Sound_swing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="GAME_OVER" type="Timer" parent="."]
wait_time = 2.0

[node name="Hurt_time" type="Timer" parent="."]
wait_time = 0.13

[connection signal="area_entered" from="Sprite/SwordHit" to="." method="_on_SwordHit_area_entered"]
[connection signal="area_entered" from="Sprite/SwordHit2" to="." method="_on_SwordHit2_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="death_Timer" to="." method="_on_death_Timer_timeout"]
[connection signal="finished" from="Sound_swing" to="." method="_on_Sound_swing_finished"]
[connection signal="timeout" from="GAME_OVER" to="." method="_on_GAME_OVER_timeout"]
[connection signal="timeout" from="Hurt_time" to="." method="_on_Hurt_time_timeout"]
